# -RotatingCube

./: .gitignore  CMakeLists.txt  CubeUIManager.cpp  CubeUIManager.h  Earth.qrc  GLWidget.cpp  GLWidget.h  MeshObjFile.h  MyGLWidget.h  cubewindow.cpp  cubewindow.h  dir_light.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  road.frag  road.vert  roadvert  textures.qrc  tools.cpp  ui_widgets.cpp  ui_widgets.h
Desktop/Питон_НГУ/plasma_torch_calc/: desktop_app.py
Documents/cube/: CubeUIManager.h  lamp.qrc  spotlight.qrc  tools.h
Documents/cube/shaders/: fragment_shader.fsh  vertex_shader.vsh
shaders/: fragment_shader.fsh  vertex_shader.vsh
